--- a/package.json
+++ b/package.json
@@ -6,8 +6,13 @@
     "@testing-library/jest-dom": "^5.11.9",
     "@testing-library/react": "^11.2.3",
     "@testing-library/user-event": "^12.6.3",
+    "build-url": "^6.0.1",
+    "iso-639-1": "^2.1.7",
+    "node-fetch": "^2.6.1",
     "react": "^17.0.1",
+    "react-autocomplete-hint": "^1.2.3",
     "react-dom": "^17.0.1",
+    "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.1",
     "web-vitals": "^0.2.4"
   },
